--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,11 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.link {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
 .App-link {
   color: #61dafb;
 }
